--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "axios": "^1.8.1",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "openai": "^4.86.1"
   }
 }
