Fetch locations api

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "scripts": {
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js"
+},
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.49.1",
@@ -8,6 +12,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "nodemon": "^3.1.9",
     "openai": "^4.86.1"
   }
 }
